added CLI component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,6 @@
     to have some html code and a template attached to it. So Angular app starts with the content of html code.
     - 
 -->
+
+<hr>
+<app-servers></app-servers>
