--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,7 +4,11 @@
 
 <!--$event is a reserved variable name you can use in the template when using event binding,
      $event is basically data emitted with that event-->
-<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
+
+
+<!--Two way binding: the ngModel will trigger the event and update the value of servername-->
+<input type="text" class="form-control" [(ngModel)]="serverName">
 <p>{{serverName}}</p>
 
 <!--property binding-->
