--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,7 +9,7 @@
 
 <!--Two way binding: the ngModel will trigger the event and update the value of servername-->
 <input type="text" class="form-control" [(ngModel)]="serverName">
-<p>{{serverName}}</p>
+<!-- <p>{{serverName}}</p> -->
 
 <!--property binding-->
 <button class="btn btn primary" [disabled]="!allowNewServer" (click)=onAddServer()> Add Server</button>
@@ -18,6 +18,14 @@
 <!-- <p>{{ allowNewServer }}</p> -->
 
 <p> {{ serverCreationStatus }}</p>
+
+<!--Assignment 2-->
+<input type="text" class="form-control" [(ngModel)]='userName'>
+
+
+<button class="btn btn-primary" [disabled]="userName === ''" (click)=onAddUser()> Add User</button>
+
+<p>{{ serverCreationStatus }}</p>
 
 <app-server></app-server>
 <app-server></app-server>
