using ngIf to output data conditionally

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -17,18 +17,28 @@
 <!--String interpolation-->
 <!-- <p>{{ allowNewServer }}</p> -->
 
-<p> {{ serverCreationStatus }}</p>
+<!-- <p> {{ serverCreationStatus }}</p> -->
+<!--Directive Usage Example-->
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
+
+<!--Ng template with the local reference marker (#noServer), we mark a certain spot in the template which we want to show conditionally-->
+<ng-template #noServer>
+    <p>No Server Created</p>
+</ng-template>
+
+
+<app-server></app-server>
+<app-server></app-server>
 
 <!--Assignment 2-->
-<input type="text" class="form-control" [(ngModel)]='userName'>
+<!-- <input type="text" class="form-control" [(ngModel)]='userName'>
 
 
 <button class="btn btn-primary" [disabled]="userName === ''" (click)=onAddUser()> Add User</button>
 
-<p>{{ serverCreationStatus }}</p>
+<p>{{ serverCreationStatus }}</p> -->
 
-<app-server></app-server>
-<app-server></app-server>
+
 
 <!--When to use String interpolation vs data binding?
     - when you're just printing something in browser, use string interpolation
@@ -39,4 +49,13 @@
     Event Binding starts with (). 
     Property Binding starts with [].
     String Interpolation starts with {{}}
+-->
+
+<!--Directives - instructions in the DOM. Eg: Components (attribute with template). There are also directives without template,
+    Eg: <p appTurnDirective>Receives a grren background!</p>
+
+    There are also built in directives
+
+
+
 -->
