dynamic styling with ngStyle

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -54,7 +54,11 @@
 <!--Directives - instructions in the DOM. Eg: Components (attribute with template). There are also directives without template,
     Eg: <p appTurnDirective>Receives a grren background!</p>
 
-    There are also built in directives
+    There are also built in directives: ngIf -Structural Directive (to output data conditionally).
+    The other type of directives are Attribute Directives (unlike structural directives, attribute directives don't add or remove
+    elements. They only change the element they were placed on)
+
+    Let's say I want to change the background of the browswer depending on the serverStatus.
 
 
 
