--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,2 @@
-<p>Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
-<!-- <p>Server with ID {{ serverId }} is {{ serverStatus }} </p> -->
+<!--The directive name is just ngStyle, the square brackets indicate we want to bind to some property on this directive-->
+<p [ngStyle]="{backgroundColor: getColor()}">Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
