--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,5 @@
-<!--The directive name is just ngStyle, the square brackets indicate we want to bind to some property on this directive-->
-<p [ngStyle]="{backgroundColor: getColor()}">Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
+<!--The directive name is just ngStyle, the square brackets indicate we want to bind to some property on this directive,
+     ngStyle - to change the CSS style itself, ngClass - to dynamically add or remove CSS classes -->
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{online: serverStatus === 'online'}">
+    Server with ID {{ serverId }} is {{ getServerStatus() }}
+</p>
